test/types/string/diten/substringOutOfBounds.good
substringOutOfBounds.chpl:3: error: halt reached - range out of bounds of string
