test/types/string/diten/substringOutOfBounds.chpl
var str = "abcdefghijklmnopqrstuvwxyz";

writeln(str[22..28]);
